@@ -10,6 +10,8 @@ lintian (2.5.13) UNRELEASED; urgency=low
     + [NT] Add sanity check in perm2oct for bad permission
       strings and throw errors when they are seen (instead
       of returning 0).
+    + [NT] Require that the input file is present for
+      read_dpkg_control and get_deb_control.
 
  -- Niels Thykier <niels@thykier.net>  Tue, 16 Apr 2013 18:24:45 +0200
 
